--- a/coc-settings.json
+++ b/coc-settings.json
@@ -11,7 +11,7 @@
       ]
     },
     "python": {
-      "command": "python",
+      "command": "/Users/26huitailang/.pyenv/versions/3.9.9/bin/python",
       "args": [
         "-mpyls",
         "-vv",
