--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,9 @@
 {
+  "coc.preferences.formatOnSaveFiletypes": ["pythion"],
+  "pyright.enable": true,
+  "python.formatting.provider": "black",
+  "pyright.organizeimports.provider": "isort",
+  "pyright.testing.provider": "pytest",
   "languageserver": {
     "go": {
       "command": "gopls",
@@ -24,7 +29,7 @@
       ],
       "settings": {
         "pyls": {
-          "enable": true,
+          "enable": false,
           "trace": {
             "server": "verbose"
           },
@@ -70,7 +75,7 @@
             "rope_completion": {
               "enabled": true
             },
-            "yapf": {
+            "black": {
               "enabled": true
             }
           }
