add mason plugin && rust support

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,10 +1,15 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["pythion"],
+  "coc.preferences.formatOnSaveFiletypes": ["python", "lua", "rust"],
   "pyright.enable": true,
   "python.formatting.provider": "black",
   "pyright.organizeimports.provider": "isort",
   "pyright.testing.provider": "pytest",
   "languageserver": {
+    "rust": {
+      "command": "rust-analyzer",
+      "rootPatterns": ["Cargo.toml"],
+      "filetypes": ["rust"]
+    },
     "go": {
       "command": "gopls",
       "rootPatterns": [
